test/fail/bad-actor-import5.mo
//MOC-FLAG --actor-idl bad-actor-import5
import imported1 "canister:foo";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP comp

